--- a/UniversityCommunities/Web.config
+++ b/UniversityCommunities/Web.config
@@ -41,7 +41,11 @@
     </compilers>
   </system.codedom>
   <connectionStrings>
-    <add name="UniversiteKulupYonetimDBEntities" connectionString="metadata=res://*/Models.DBModel1.csdl|res://*/Models.DBModel1.ssdl|res://*/Models.DBModel1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.;initial catalog=UniversiteKulupYonetimDB;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    
+    
+    <add name="UniversiteKulupYonetimDBEntities" connectionString="metadata=res://*/Models.DBModel1.csdl|res://*/Models.DBModel1.ssdl|res://*/Models.DBModel1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=lena.veridyen.com\MSSQLSERVER2016;initial catalog=topluluko_db;integrated security=False;User ID=topluluko_db;Password=cmG2c2!1;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    
+    
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
