--- a/UniversityCommunities/UniversityCommunities.csproj
+++ b/UniversityCommunities/UniversityCommunities.csproj
@@ -55,6 +55,7 @@
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Runtime.Serialization" />
     <Reference Include="System.Security" />
+    <Reference Include="System.ServiceModel" />
     <Reference Include="System.Web.DynamicData" />
     <Reference Include="System.Web.Entity" />
     <Reference Include="System.Web.ApplicationServices" />
@@ -99,7 +100,14 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <None Include="Connected Services\ServiceReference1\configuration91.svcinfo" />
+    <None Include="Connected Services\ServiceReference1\configuration.svcinfo" />
+    <None Include="Connected Services\ServiceReference1\Reference.svcmap">
+      <Generator>WCF Proxy Generator</Generator>
+      <LastGenOutput>Reference.cs</LastGenOutput>
+    </None>
     <Content Include="images\Logos\bilisimtoplulugu.png" />
+    <Content Include="images\Logos\okanemt.jpg" />
     <Content Include="images\Logos\okanmekatronik.png" />
     <Content Include="images\okanLogo.png" />
     <Content Include="Content\bootstrap-grid.css" />
@@ -149,6 +157,16 @@
     <Content Include="Models\DBModel1.edmx.diagram">
       <DependentUpon>DBModel1.edmx</DependentUpon>
     </Content>
+    <None Include="Connected Services\ServiceReference1\UniServis.wsdl" />
+    <Content Include="Connected Services\ServiceReference1\UniversityCommunities.ServiceReference1.Fakulteler.datasource">
+      <DependentUpon>Reference.svcmap</DependentUpon>
+    </Content>
+    <Content Include="Connected Services\ServiceReference1\UniversityCommunities.ServiceReference1.KonferansSalonlari.datasource">
+      <DependentUpon>Reference.svcmap</DependentUpon>
+    </Content>
+    <Content Include="Connected Services\ServiceReference1\UniversityCommunities.ServiceReference1.Saatler.datasource">
+      <DependentUpon>Reference.svcmap</DependentUpon>
+    </Content>
     <None Include="Scripts\jquery-3.3.1.intellisense.js" />
     <Content Include="Scripts\jquery-3.3.1.js" />
     <Content Include="Scripts\jquery-3.3.1.min.js" />
@@ -176,7 +194,13 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="App_Start\RouteConfig.cs" />
+    <Compile Include="Connected Services\ServiceReference1\Reference.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Reference.svcmap</DependentUpon>
+    </Compile>
     <Compile Include="Controllers\AdminController.cs" />
+    <Compile Include="Controllers\AuditoriumsController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\SocietiesController.cs" />
     <Compile Include="Global.asax.cs">
@@ -289,6 +313,7 @@
     <Content Include="Views\Societies\Details.cshtml" />
     <Content Include="Views\Societies\AddLogo.cshtml" />
     <Content Include="Views\Admin\Duyuru.cshtml" />
+    <Content Include="Views\Auditoriums\Index.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
@@ -305,6 +330,12 @@
   <ItemGroup>
     <Service Include="{4A0DDDB5-7A95-4FBF-97CC-616D07737A77}" />
     <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
+  </ItemGroup>
+  <ItemGroup>
+    <WCFMetadata Include="Connected Services\" />
+  </ItemGroup>
+  <ItemGroup>
+    <WCFMetadataStorage Include="Connected Services\ServiceReference1\" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
